--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.kth</groupId>
-    <artifactId>github-action-maven-tutorial</artifactId>
+    <groupId>demo</groupId>
+    <artifactId>mwo3lab</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -55,12 +55,6 @@
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.1.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter</artifactId>
-                        <version>5.6.2</version>
-                        <scope>test</scope>
                     </dependency>
                 </dependencies>
             </plugin>
